# jammos_wardrobe_app

./: pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
src/: main.py
src/models/: __init__.py  component.py  drawer.py  enums.py  hanging.py  overhead.py  project.py  shelf.py
src/services/: __init__.py  component_library.py  export_service.py  file_service.py  print_service.py
src/streamlit_components/wardrobe_canvas/: index.html
src/utils/: __init__.py  config.py  geometry.py  units.py
src/views/: __init__.py  main_window.py
src/views/canvas/: __init__.py  canvas_scene.py  canvas_view.py
src/views/items/: __init__.py  base_item.py  drawer_item.py  hanging_item.py  overhead_item.py  shelf_item.py
src/views/panels/: __init__.py  property_panel.py  tool_palette.py
